solved layout length problem raised by banner and slogan, add border-box to layout. Solved not centered text problem

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -2,6 +2,9 @@ html {
   font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 body {
   margin: 0;
